# rust-s3-file-upload

./: Cargo.toml  README.md
src/: main.rs  s3_client.rs
